--- a/package.json
+++ b/package.json
@@ -8,7 +8,8 @@
     "start": "next start",
     "lint": "eslint",
     "db:create": "tsx scripts/db-create.ts",
-    "db:seed": "tsx scripts/db-seed.ts"
+    "db:seed": "tsx scripts/db-seed.ts",
+    "check-cart": "node scripts/check-cart-fix.js"
   },
   "dependencies": {
     "@hookform/resolvers": "^3.10.0",
